# agentic-rag

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
data/company_docs/: company_overview.md  employee_onboarding.md  sources.md
data/company_docs/cloudflare/: cloudflare_d1_get_started.md  cloudflare_durable_objects_get_started.md  cloudflare_kv_get_started.md  cloudflare_queues_get_started.md  cloudflare_workers_ai_bindings.md  cloudflare_workers_bindings.md
eval/: __init__.py  datasets.py  harness.py
src/: agent.py  constants.py  ingest.py  prompts.py  state.py  tools.py  utils.py
src/agentic_rag/: __init__.py  agent.py  citations.py  cli.py  constants.py  context_tracker.py  corpus.py  embeddings.py  ingest.py  prompts.py  showcase.py  state.py  tools.py  trace.py  utils.py
tests/: test_smoke.py
