[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG demo with hierarchical retrieval tools, LM Studio, and citation-grounded answers"
authors = [
    { name = "David Ojo", email = "conceptcodes@gmail.com" },
    { name = "GPT-5.3-Codex", email = "codex@openai.com" },
    { name = "Microsoft Copilot", email = "copilot@microsoft.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "httpx>=0.27.0",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "rich>=13.9.0",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]

[project.scripts]
agentic-rag = "agentic_rag.cli:main"

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8", "mypy>=1.10", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag", "eval"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["__pycache__", ".git", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "D", "ANN", "S", "PT"]
ignore = [
    "D100",
    "D104",
    "D107",
    "D203",
    "D212",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]
"eval/*" = ["D", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "tiktoken.*",
    "chromadb.*",
    "sentence_transformers.*",
    "chromadb.api.*",
]
ignore_missing_imports = true
ignore_errors = true
